tests/ui/delegation/zero-args-delegations-ice-154332.stderr
error: delegation's target expression is specified for function with no params
  --> $DIR/zero-args-delegations-ice-154332.rs:6:18
   |
LL |       reuse a as b {
   |  __________________^
LL | |
LL | |         let closure = || {
LL | |             fn foo<'a, 'b, T: Clone, const N: usize, U: Clone>(_t: &'a T, _u: &'b U) {}
...  |
LL | |         closure();
LL | |     }
   | |_____^

error: delegation's target expression is specified for function with no params
  --> $DIR/zero-args-delegations-ice-154332.rs:26:31
   |
LL |     reuse to_reuse::zero_args { self }
   |                               ^^^^^^^^

error: delegation's target expression is specified for function with no params
  --> $DIR/zero-args-delegations-ice-154332.rs:35:18
   |
LL |       reuse a as b {
   |  __________________^
LL | |
LL | |         let closure = || {
LL | |             reuse a as b {
...  |
LL | |         closure();
LL | |     }
   | |_____^

error: delegation's target expression is specified for function with no params
  --> $DIR/zero-args-delegations-ice-154332.rs:38:26
   |
LL |               reuse a as b {
   |  __________________________^
LL | |
LL | |                 fn foo<'a, 'b, T: Clone, const N: usize, U: Clone>(_t: &'a T, _u: &'b U) {}
...  |
LL | |             }
   | |_____________^

error: delegation's target expression is specified for function with no params
  --> $DIR/zero-args-delegations-ice-154332.rs:45:30
   |
LL |                   reuse a as b {
   |  ______________________________^
LL | |
LL | |                     reuse foo::<String, 1, String> as bar;
LL | |                     bar(&"".to_string(), &"".to_string());
LL | |                 }
   | |_________________^

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/zero-args-delegations-ice-154332.rs:6:11
   |
LL |       reuse a as b {
   |  ___________^______-
LL | |
LL | |         let closure = || {
LL | |             fn foo<'a, 'b, T: Clone, const N: usize, U: Clone>(_t: &'a T, _u: &'b U) {}
...  |
LL | |         closure();
LL | |     }
   | |_____- unexpected argument of type `()`
   |
note: function defined here
  --> $DIR/zero-args-delegations-ice-154332.rs:4:8
   |
LL |     fn a() {}
   |        ^
help: remove the extra argument
   |
LL -     reuse a as b {
LL +     reuse {
   |

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/zero-args-delegations-ice-154332.rs:26:21
   |
LL |     reuse to_reuse::zero_args { self }
   |                     ^^^^^^^^^ -------- unexpected argument
   |
note: function defined here
  --> $DIR/zero-args-delegations-ice-154332.rs:21:16
   |
LL |         pub fn zero_args() -> i32 {
   |                ^^^^^^^^^
help: remove the extra argument
   |
LL -     reuse to_reuse::zero_args { self }
LL +     reuse to_reuse::zero_arg{ self }
   |

error[E0308]: mismatched types
  --> $DIR/zero-args-delegations-ice-154332.rs:26:21
   |
LL |     reuse to_reuse::zero_args { self }
   |                     ^^^^^^^^^ expected `()`, found `i32`
   |
help: consider using a semicolon here
   |
LL |     reuse to_reuse::zero_args; { self }
   |                              +
help: try adding a return type
   |
LL -     reuse to_reuse::zero_args { self }
LL +     reuse to_reuse:: -> i32 { self }
   |

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/zero-args-delegations-ice-154332.rs:35:11
   |
LL |       reuse a as b {
   |  ___________^______-
LL | |
LL | |         let closure = || {
LL | |             reuse a as b {
...  |
LL | |         closure();
LL | |     }
   | |_____- unexpected argument of type `()`
   |
note: function defined here
  --> $DIR/zero-args-delegations-ice-154332.rs:33:8
   |
LL |     fn a() {}
   |        ^
help: remove the extra argument
   |
LL -     reuse a as b {
LL +     reuse {
   |

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/zero-args-delegations-ice-154332.rs:38:19
   |
LL |               reuse a as b {
   |  ___________________^______-
LL | |
LL | |                 fn foo<'a, 'b, T: Clone, const N: usize, U: Clone>(_t: &'a T, _u: &'b U) {}
...  |
LL | |             }
   | |_____________- unexpected argument of type `()`
   |
note: function defined here
  --> $DIR/zero-args-delegations-ice-154332.rs:33:8
   |
LL |     fn a() {}
   |        ^
help: remove the extra argument
   |
LL -             reuse a as b {
LL +             reuse {
   |

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/zero-args-delegations-ice-154332.rs:45:23
   |
LL |                   reuse a as b {
   |  _______________________^______-
LL | |
LL | |                     reuse foo::<String, 1, String> as bar;
LL | |                     bar(&"".to_string(), &"".to_string());
LL | |                 }
   | |_________________- unexpected argument of type `()`
   |
note: function defined here
  --> $DIR/zero-args-delegations-ice-154332.rs:33:8
   |
LL |     fn a() {}
   |        ^
help: remove the extra argument
   |
LL -                 reuse a as b {
LL +                 reuse {
   |

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0061, E0308.
For more information about an error, try `rustc --explain E0061`.
